overflow fix

--- a/sistema_02/style.css
+++ b/sistema_02/style.css
@@ -29,7 +29,7 @@
 
 #sketchDiv {
   height:80%;
-  overflow:hidden;
+//  overflow:hidden;
   //background-color: #F00;
   margin: 50px;
   font-family: 'Roboto Mono', monospace;
